# chrono-web

./: .eslintrc.json  .gitignore  .prettierrc  README.md  formkit.config.js  nuxt.config.ts  package.json  tailwind.config.js  tsconfig.json
app/: .gitignore  app.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vitest.config.mts  vitest.setup.ts
app/assets/: tasks.json
app/components/: Calendar.vue  ColorSelect.vue  ItemRow.vue  ItemRowOld.vue  Key.vue  NavItem.vue  NavItemMobile.vue  Navbar.vue  SidePanel.vue  UserIcon.vue
app/composables/: state.ts  useActivityForm.ts  useAuthCheck.ts  useEventListener.ts  useMonthYearSelect.ts  useStartDragOld.ts  useStartEndDrag.ts
app/constants/: colors.ts  routes.ts
app/layouts/: default.vue
app/middleware/: auth.global.ts  auth.ts
app/pages/: create-account.vue  index.vue  login-old.vue  login.vue  reset-password.vue  settings.vue  test.vue  timeline-old.vue  timeline.vue
app/types/: activity.ts  api-request.ts  date.ts  item.ts  user.ts
app/utils/: activity.test.ts  activity.ts  api-activity.ts  api-item.ts  api-request.test.ts  api-request.ts  api-user.ts  date.ts  (+6 more)
components/: Calendar.vue  CellDetailed.vue  ColorSelect.vue  ItemRow.vue  NavItem.vue  Navbar.vue  SidePanel.vue  UserIcon.vue
composables/: useEventListener.ts  useMonthYearSelect.ts  useStartEndDrag.ts
middleware/: auth.global.ts
pages/: create-account.vue  dashboard.vue  index.vue  login.vue  reset-password.vue  settings.vue  test.vue  timeline.vue
server/: .dockerignore  Cargo.toml  Dockerfile
server/api/: items.get.ts
server/src/: main.rs
server/src/api/: activity_api.rs  mod.rs
server/src/database/: mod.rs  mongodb_database.rs
server/src/error/: error.rs
server/src/handlers/: activity_handler.rs  auth_handler.rs  mod.rs
server/src/models/: activity_model.rs  auth_model.rs  mod.rs  state_model.rs  user_model.rs
server/src/utils/: auth.rs  utils.rs
types/: form.ts  item.ts  user.ts
utils/: api-item.ts  api-user.ts  api.ts  date.ts  item.ts  math.ts
(+14 files in other folders)
