[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = "0.7.5"
chrono = "0.4.38"
dotenv = "0.15.0"
futures = "0.3.28"
mongodb =  "3.0.1"
serde = "1.0.188"
serde_json = "1.0.127"
tokio = {version = "1.32.0", features = ["full"]}
tower-http = { version = "0.5.2", features = ["cors"] }

