[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = "0.7.5"
axum-extra = { version = "0.9.2", features = ["typed-header","cookie","cookie-private"] }
bcrypt = "0.15.1"
chrono = "0.4.38"
dotenv = "0.15.0"
futures = "0.3.28"
jsonwebtoken = "9.3.0"
mongodb =  "3.0.1"
serde = "1.0.209"
serde_json = "1.0.127"
tokio = {version = "1.32.0", features = ["full"]}
tower-http = { version = "0.5.2", features = ["cors","trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.3", features = ["v4"] }
